<resources>
    <string name="app_name">AVSamples</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_audio_record_play">Audio: Record &amp; Play</string>
    <string name="menu_extractor_muxer">Media Extractor &amp; Muxer</string>
    <string name="menu_audio_record_aac">Audio: Record AAC</string>
    <string name="menu_camerax_preview">CameraX Preview</string>
    <string name="menu_camera2_preview_record">Camera2 Preview &amp; Record</string>
    <string name="menu_graphic_gles2_shape">Graphic: GLES2 Shape</string>

    <string name="menu_image_image_view">Image: ImageView</string>
    <string name="menu_image_surface_view">Image: SurfaceView</string>
    <string name="menu_image_custom_view">Image: CustomView</string>
    <string name="menu_image_glsurface_view">Image: GLSurfaceView</string>
    <string name="menu_image_sprite2d">Image: Sprite2d</string>
    <string name="menu_image_gl30tex2d">Image: DrawTex(GLES 3.0)</string>

    <string name="menu_video_texture_renderer">Video: Texture Renderer</string>
    <string name="menu_video_hw_decoder">Video: Hardware Decoder</string>

    <string name="menu_webrtc_local_view">WebRTC: LocalView</string>

    <string name="home_second">Home Second</string>

    <string name="capture">Capture</string>
</resources>
