<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_audio_record_play"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_audio_record_play" />

        <item
            android:id="@+id/nav_extractor_muxer"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_extractor_muxer" />

        <item
            android:id="@+id/nav_media_codec"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_audio_record_aac" />

        <item
            android:id="@+id/nav_camerax_preview"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camerax_preview" />

        <item
            android:id="@+id/nav_camera2_preview_record"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera2_preview_record" />

        <item
            android:id="@+id/nav_graphic_gles2_shape"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_graphic_gles2_shape" />

        <item
            android:id="@+id/nav_video_texture_renderer"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_video_texture_renderer" />

        <item
            android:id="@+id/nav_image_image_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_image_image_view" />
        <item
            android:id="@+id/nav_image_surface_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_image_surface_view" />
        <item
            android:id="@+id/nav_image_custom_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_image_custom_view" />

        <item
            android:id="@+id/nav_image_glsurface_view"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_image_glsurface_view" />

        <item
            android:id="@+id/nav_image_sprite2d"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_image_sprite2d" />

        <item
            android:id="@+id/nav_image_gl30tex2d"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_image_gl30tex2d" />

        <item
            android:id="@+id/nav_webrtc_local_view"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_webrtc_local_view" />
    </group>
</menu>
